--- a/app/views/staff/refunds/edit.html.haml
+++ b/app/views/staff/refunds/edit.html.haml
@@ -13,3 +13,5 @@
         = render partial: "form", locals: { f: f, activity: @activity }
 
         = f.govuk_submit t("default.button.submit")
+
+        = link_to t("default.button.delete"), activity_refund_path(@activity, @refund), method: "delete" , class: "govuk-button govuk-button--warning", "data-module": "govuk-button", role: "button", data: { confirm: "Are you sure you want to delete this refund?" }
