or Activities and Reports pages ensure the structural syntax of the Tablist matches the example set out in the GOV.UK Design System, when applied to a list. The list should include role="tablist", the list item should include role="presentation" and the anchor link role="tab".

--- a/app/views/staff/reports/_tab.html.haml
+++ b/app/views/staff/reports/_tab.html.haml
@@ -1,4 +1,4 @@
-%li{class: "govuk-tabs__list-item #{ "govuk-tabs__list-item--selected" if active_tab == name }"}
+%li{class: "govuk-tabs__list-item #{ "govuk-tabs__list-item--selected" if active_tab == name }", role: "presentation"}
   = link_to t("tabs.report.#{name}"),
     path,
-    { class: "govuk-tabs__tab", aria: { current: (active_tab == name ? "page" : nil) } }
+    { class: "govuk-tabs__tab", role: "tab", aria: { current: (active_tab == name ? "page" : nil) } }
