--- a/app/views/staff/shared/activities/_tab_nav_item.html.haml
+++ b/app/views/staff/shared/activities/_tab_nav_item.html.haml
@@ -1,4 +1,4 @@
 - selected = controller_name.ends_with?(tab)
-%li{class: ["govuk-tabs__list-item", ("govuk-tabs__list-item--selected" if selected)] }
+%li{role: "presentation", class: ["govuk-tabs__list-item", ("govuk-tabs__list-item--selected" if selected)] }
   = link_to t(tab, scope: "tabs.activity"), path,
     { class: "govuk-tabs__tab", role: "tab", aria: { controls: tab, selected: selected } }
