--- a/app/views/staff/shared/activities/_tab_nav.html.haml
+++ b/app/views/staff/shared/activities/_tab_nav.html.haml
@@ -1,7 +1,7 @@
 %h2.govuk-tabs__title
   = t("tabs.activity.title")
 
-%ul.govuk-tabs__list
+%ul.govuk-tabs__list{role: "tablist"}
   = render partial: "staff/shared/activities/tab_nav_item", locals: { tab: "financials", path: organisation_activity_financials_path(@activity.organisation, @activity) }
   = render partial: "staff/shared/activities/tab_nav_item", locals: { tab: "other_funding", path: organisation_activity_other_funding_path(@activity.organisation, @activity) }
   = render partial: "staff/shared/activities/tab_nav_item", locals: { tab: "details", path: organisation_activity_details_path(@activity.organisation, @activity) }
