Only show View link if the user can access the report
Whether a report can be accessed or not by a DP user depends on the state of the report, so the policy needs the actual report object instead of a symbol.

--- a/app/views/staff/shared/reports/_table_row.html.haml
+++ b/app/views/staff/shared/reports/_table_row.html.haml
@@ -10,4 +10,5 @@
   %td.govuk-table__cell
     - if policy(:report).edit?
       = a11y_action_link(t("default.link.edit"), edit_report_path(report), report.description)
-    = a11y_action_link(t("default.link.view"), report_path(report), report.description)
+    - if policy(report).show?
+      = a11y_action_link(t("default.link.view"), report_path(report), report.description)
