--- a/app/views/staff/shared/reports/_tabs.html.haml
+++ b/app/views/staff/shared/reports/_tabs.html.haml
@@ -5,5 +5,5 @@
     %a.govuk-tabs__tab{href: "#current", role: "tab"}
       = t("tabs.report.current")
   %li.govuk-tabs__list-item{role: "presentation"}
-    %a.govuk-tabs__tab{href: "#historic", role: "tab"}
-      = t("tabs.report.historic")
+    %a.govuk-tabs__tab{href: "#approved", role: "tab"}
+      = t("tabs.report.approved")
