--- a/app/views/staff/shared/reports/_table_empty.html.haml
+++ b/app/views/staff/shared/reports/_table_empty.html.haml
@@ -3,4 +3,7 @@
     = t("page_content.reports.title")
   %tbody.govuk-table__body
     %tr.govuk-table__row
-      %td.govuk-table__cell= t("table.body.report.no_reports")
+      %td.govuk-table__cell
+        .govuk-grid-row
+          .govuk-grid-column-two-thirds
+            =t("table.body.report.no_reports")
