Don't include fields for types of date not present
The IATI XML must include at least one of planned and actual start dates, planned and actual end dates.

However, if the `planned_start_date` was missing, the XML would contain an invalid `activity-date` field with an empty `iso-date`.

We now check for the presence of each date field before including it.

The model validation on the `dates_step` is responsible for ensuring that at least one of each types of start and end dates (planned / actual) are included.

--- a/app/views/staff/shared/xml/_activity.xml.haml
+++ b/app/views/staff/shared/xml/_activity.xml.haml
@@ -24,10 +24,12 @@
   - if activity.previous_identifier?
     %other-identifier{"ref" => activity.transparency_identifier, type: "A1"}
   %activity-status{"code" => activity.iati_status}/
-  %activity-date{"iso-date" => activity.planned_start_date, type: "1"}/
+  - if activity.planned_start_date?
+    %activity-date{"iso-date" => activity.planned_start_date, type: "1"}/
   - if activity.actual_start_date?
     %activity-date{"iso-date" => activity.actual_start_date, type: "2"}/
-  %activity-date{"iso-date" => activity.planned_end_date, type: "3"}/
+  - if activity.planned_end_date?
+    %activity-date{"iso-date" => activity.planned_end_date, type: "3"}/
   - if activity.actual_end_date?
     %activity-date{"iso-date" => activity.actual_end_date, type: "4"}/
   %contact-info{"type" => "1"}
