--- a/app/views/public/visitors/index.html.haml
+++ b/app/views/public/visitors/index.html.haml
@@ -19,7 +19,7 @@
         %li report actual and forecast spend on activities
         %li see a summary of your ODA activity
 
-      = button_to '/auth/auth0', class: 'govuk-button', role: 'button', draggable: 'false' do
+      = link_to new_user_session_path, class: 'govuk-button', role: 'button', draggable: 'false' do
         = t("header.link.sign_in")
         %svg.govuk-button__start-icon{ xmlns: "http://www.w3.org/2000/svg", width: "17.5", height: "19", viewBox: "0 0 33 40", role: "presentation", focusable: "false" }
           %path{ fill: "currentColor", d: "M0 0h13l20 20-20 20H0l20-20z" }
