--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -28,6 +28,4 @@
           = link_to t("page_title.users.index"), users_path, class: "govuk-header__link"
 
       %li{ class: navigation_item_class(sign_out_path) }
-        %a{ href: sign_out_path, class: 'govuk-header__link' }
-          = t("header.link.sign_out")
-
+        = link_to t("header.link.sign_out"), destroy_user_session_path, method: :delete, class: "govuk-header__link"
