--- a/app/views/staff/users/_form.html.haml
+++ b/app/views/staff/users/_form.html.haml
@@ -5,7 +5,7 @@
   = f.govuk_email_field :email, disabled: (action_name == "edit")
 
   - if @service_owner.present?
-    = f.govuk_radio_buttons_fieldset :organisation_id, classes: "user-organisations" do
+    = f.govuk_radio_buttons_fieldset :organisation, classes: "user-organisations" do
       = f.govuk_radio_button :organisation_id, @service_owner.id, label: { text: @service_owner.name }, link_errors: true
       - if @delivery_partners.any?
         = f.govuk_radio_divider
