Remove redundant double 'govuk-button' classes

--- a/app/views/staff/actual_uploads/update.html.haml
+++ b/app/views/staff/actual_uploads/update.html.haml
@@ -18,4 +18,4 @@
           = t("page_title.actual.upload_success")
 
         = render partial: "shared/actuals/actuals_by_activity"
-        = link_to t("importer.success.actual.back_link"), report_actuals_path(@report_presenter), class: "govuk-button govuk-button"
+        = link_to t("importer.success.actual.back_link"), report_actuals_path(@report_presenter), class: "govuk-button"
