--- a/app/views/staff/reports/_actuals_upload.html.haml
+++ b/app/views/staff/reports/_actuals_upload.html.haml
@@ -14,4 +14,4 @@
 
 .govuk-button-group
   = link_to t("page_content.actuals.button.download_template"), report_actual_upload_path(@report_presenter, format: :csv), class: "govuk-button govuk-button--secondary"
-  = link_to t("page_content.actuals.button.upload"), new_report_actual_upload_path(@report_presenter), class: "govuk-button govuk-button"
+  = link_to t("page_content.actuals.button.upload"), new_report_actual_upload_path(@report_presenter), class: "govuk-button"
