Allow comments on Level B activities
This extends the activity comments functionality to allow BEIS users to add
comments at Level B, as well as edit existing Level B comments

This makes reports optional on comments, but their presence is validated unless
the commentable is a programme activity

Per client advice, partner organisations will be able to see comments on Level B
activities

--- a/app/views/activity_comments/edit.html.haml
+++ b/app/views/activity_comments/edit.html.haml
@@ -6,9 +6,10 @@
       %h2.govuk-heading-l
         = t("page_content.comment.edit_about_activity", activity: @activity.title)
 
-  .govuk-grid-row
-    .govuk-grid-column-full
-      = render partial: "reports/summary_short", locals: { report: ReportPresenter.new(@comment.report) }
+  - if @comment.report
+    .govuk-grid-row
+      .govuk-grid-column-full
+        = render partial: "reports/summary_short", locals: { report: ReportPresenter.new(@comment.report) }
 
   .govuk-grid-row
     .govuk-grid-column-full
