DRY up activity comments tab translations
Previously there were two translations for the actvity comments index, one for
Level B and one for Levels C and D. The Level B translation was the same as the
first sentence in the Levels C and D translation, but the latter had an extra
sentence. This separates out the repeated content and unique content to avoid
repetition

--- a/app/views/activities/comments.html.haml
+++ b/app/views/activities/comments.html.haml
@@ -20,12 +20,11 @@
           %h2.govuk-heading-l
             = t("page_title.comment.index")
 
-          - if @activity.programme?
-            .govuk-body
-              = t("page_content.comment.index_level_b")
-          - else
-            .govuk-body
-              = t("page_content.comment.index_html")
+          .govuk-body
+            = t("page_content.comment.index.default")
+            - if @activity.is_project?
+              = tag(:br)
+              = t("page_content.comment.index.only_when_reportable")
 
           - if show_link_to_add_comment?(activity: @activity, report: @report)
             .govuk-body
