Add ISPF partner countries to activity details
Also includes an edit button, and an "add" button when on the ISPF partner
countries step of the form (e.g. if you exit the form and access the
activity details page)

Co-authored-by: George <george@dxw.com>

--- a/app/views/shared/activities/_activity.html.haml
+++ b/app/views/shared/activities/_activity.html.haml
@@ -216,6 +216,16 @@
       - if policy(activity_presenter).update? && step_is_complete_or_next?(activity: activity_presenter, step: :dates)
         = a11y_action_link(t("default.link.#{activity_presenter.call_to_action(:planned_start_date)}"), activity_step_path(activity_presenter, :dates), t("activerecord.attributes.activity.actual_end_date"))
 
+  - if activity_presenter.is_ispf_funded?
+    .govuk-summary-list__row.ispf_partner_countries
+      %dt.govuk-summary-list__key
+        = t("activerecord.attributes.activity.ispf_partner_countries")
+      %dd.govuk-summary-list__value
+        = activity_presenter.ispf_partner_countries
+      %dd.govuk-summary-list__actions
+        - if policy(activity_presenter).update? && step_is_complete_or_next?(activity: activity_presenter, step: :ispf_partner_countries)
+          = a11y_action_link(t("default.link.#{activity_presenter.call_to_action(:ispf_partner_countries)}"), activity_step_path(activity_presenter, :ispf_partner_countries), t("activerecord.attributes.activity.ispf_partner_countries"))
+
   .govuk-summary-list__row.benefitting_countries
     %dt.govuk-summary-list__key
       = t("activerecord.attributes.activity.benefitting_countries")
