--- a/app/views/shared/implementing_organisations/_table.html.haml
+++ b/app/views/shared/implementing_organisations/_table.html.haml
@@ -18,7 +18,7 @@
         %td.govuk-table__cell= organisation.organisation_type
         %td.govuk-table__cell= organisation.iati_reference
         %td.govuk-table__cell
-          - if policy(:project).edit?
+          - if policy(@activity).edit?
             = form_with(scope: :implementing_organisation, model: organisation, url: activity_implementing_organisation_path(@activity, organisation), method: :delete) do |f|
               = f.hidden_field :organisation_id, value: organisation.id
               %button.govuk-button.govuk-button--secondary{ name: "delete" }
