--- a/app/views/shared/activities/_implementing_organisations.html.haml
+++ b/app/views/shared/activities/_implementing_organisations.html.haml
@@ -3,8 +3,8 @@
     %h2.govuk-heading-m
       = t("page_content.activity.implementing_organisation.heading")
 
-    - if policy(@activity).edit?
-      = link_to(t("page_content.activity.implementing_organisation.button.new"), new_activity_implementing_organisation_path(@activity), class: "govuk-button")
+    - if policy(activity).edit?
+      = link_to(t("page_content.activity.implementing_organisation.button.new"), new_activity_implementing_organisation_path(activity), class: "govuk-button")
 
-    - if @activity.implementing_organisations.present?
-      = render partial: "shared/implementing_organisations/table", locals: { implementing_organisations: @implementing_organisation_presenters }
+    - if activity.implementing_organisations.present?
+      = render partial: "shared/implementing_organisations/table", locals: { activity: activity, implementing_organisations: @implementing_organisation_presenters }
